# zero2prod

./: .gitignore  Cargo.toml  Readme.md
migrations/: 20221217204603_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
